objects/Period__c.object
<CustomObject>
    <description>Captures fixed periods, to standardize start and end dates</description>
    <fields>
        <fullName>PeriodEnd__c</fullName>
        <defaultValue>TODAY() + 365</defaultValue>
        <label>Period End</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PeriodStart__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Period Start</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Year</fullName>
                    <default>true</default>
                    <label>Year</label>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Trimester</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Period</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>